Version ?.?.?? (released ??-??-????):

	* New ship pictures.
	* UI usability improvements: starchart panning don't need the
	  shift key anymore, the planets and ships get centered when
   	  double-clicking on them.

Version 0.2.13 (released 05-03-2004):

	* Ship visualization UI completed.
	* Character conversion from CP437 (DOS) to UTF-8 for object names.
	* RPM .spec file added  - RPM package generation working
	* Debian control files added - DEB package generation working
	* Bug fixed: program crashed when clicking "play" button on empty
	  game manager.
	* Bug fixed: KOREx.DAT now checks for uppercase & lowercase file
	  names.
	* Planets with starbase have a special mark on starchart.
	* Compilation flags removed from Makefile that disabled deprecated
	  features, now GWP can be compiled against GTK+ 2.4.0.
	* Unpack now generates korex.dat file.

Version 0.2.12 (released 04-10-2004):

	* Starchart placed on the middle when defining a new game.
	* All specs data files are loaded.
	* Developers documentation generated using doxygen.
	* Basic minefield visualization.
	* Basic ion storm visualization.
	* GDS panel info completed.
	* Lots of code cleanups & bugfixes.
	* Several UI optimizations.

Version 0.2.11 (released 03-15-2004):

	* Bugs on some ship cargo unload and transfer methods were fixed.
	* Bugs on ship data loading and ship on starchart manipulation
	  were fixed.
	* Bug on the unpack detection was fixed, the path was assembled
	  incorrectly so the playerN.rst was not found.
	* Unpack feature enhanced to store additional targets on TARGETx.EXT
	  file.
	* German translation, thanks to Stefan Reuther!!!

Version 0.2.10 (released 02-02-2004):

	* Several code optimizations on GUI updates.
	* Planet and ship marks restyled.
	* Planets are shown as circles, ships as triangles oriented
  	  depending on their heading.
	* First implementation on ship data: right-click on them to check
	  for their info.