@@ -4,6 +4,7 @@ Version ?.?.?? (released ??-??-????):
 	* UI usability improvements: starchart panning don't need the
 	  shift key anymore, the planets and ships get centered when
    	  double-clicking on them.
+	* New race icons on game manager.
 
 Version 0.2.13 (released 05-03-2004):
 
